# MoleRuffle

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/moleruffle-core/: Cargo.toml
crates/moleruffle-core/src/: cache.rs  lib.rs  mem.rs
desktop/: Cargo.toml  build.rs
desktop/src/: ios_debug_hud.rs  ios_gamepad.rs  ios_textbar.rs  keymap.rs  main.rs
docs/: ARCHITECTURE.md
ios/: Info.plist  LaunchScreen.storyboard  MoleRuffle.entitlements  build-device.sh  make-testflight.sh  project.yml  run-sim.sh
ios/Stub/: main.c
