# MoleRuffle — 专为「摩尔庄园」网页版(mole.61.com)定制的跨平台原生客户端
# 基于 Ruffle 引擎,Rust 编写。目标平台:Windows / macOS / Linux / Android / iOS。
[workspace]
resolver = "2"
members = [
    "crates/moleruffle-core",
    "desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moleworld-dev/MoleRuffle"
authors = ["moleworld-dev"]

[workspace.dependencies]
# ── Ruffle 引擎:钉死在一个已【实测能在线跑通 mole.61.com】的 commit ──
# 实测:cargo build -p ruffle_desktop @304a3c9d,跑 http://mole.61.com/Client.swf
# 成功进入游戏世界、原生 TCP 连真实服务器、收发二进制协议、9.5 分钟零崩。
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", rev = "304a3c9dcaf42ed6d4b1c8bbd05f10d21f407c2e", features = ["audio", "mp3", "aac", "nellymoser", "default_compatibility_rules"] }
ruffle_render = { git = "https://github.com/ruffle-rs/ruffle", rev = "304a3c9dcaf42ed6d4b1c8bbd05f10d21f407c2e" }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle", rev = "304a3c9dcaf42ed6d4b1c8bbd05f10d21f407c2e" }
ruffle_frontend_utils = { git = "https://github.com/ruffle-rs/ruffle", rev = "304a3c9dcaf42ed6d4b1c8bbd05f10d21f407c2e", features = ["cpal", "navigator"] }

# ── 与 Ruffle 完全对齐的版本(否则 wgpu surface 类型对不上)──
url = "2.5.8"
wgpu = "27.0.1"
winit = "0.30.13"
raw-window-handle = "0.6.2"
futures = "0.3.32"
async-task = "4.7.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
# 各平台标准数据目录(桌面=各自数据目录;iOS=沙盒内 Library/Application Support,
# 重启/更新保留)。用于 SharedObject(“记住账号”等)磁盘持久化。
dirs = "6"

[profile.release]
# 引擎是 AVM 解释器,优化等级对手机帧率影响大
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true          # 瘦身(不影响帧率);不加 panic="abort":Ruffle 用 catch_unwind 做 AVM 错误恢复

# dev 构建也给依赖(含 ruffle 解释器)开满优化,这样开发自测时帧率不被 debug 拖垮;
# 本 workspace 的 crate 仍 opt-level=0(编译快、可调试)。
[profile.dev.package."*"]
opt-level = 3

# ───────────────────────────────────────────────────────────────────────────
# 【可一键回退】本地 Ruffle fork:把所有出自 ruffle git 源的 crate 重定向到本地克隆
# (../ruffle-fork,纯净基线 = pin 的 304a3c9)。用于自研纹理驻留/逐出省内存。
# 必须覆盖 Cargo.lock 中所有 git+ruffle 的 crate(共 15),漏一个会出现两份 ruffle_core
# → "expected struct X found struct X" 诡异编译错。当前 fork 是逐字节纯净拷贝,接上后
# 编译产物应与纯 pin 一致(零行为改动),先验证管线;之后再在 fork 内分阶段改。
# 回退:删掉整个 [patch.*] 段 + `cargo build` 即回到纯净 pin。
# ───────────────────────────────────────────────────────────────────────────
[patch."https://github.com/ruffle-rs/ruffle"]
swf                   = { path = "../ruffle-fork/swf" }
ruffle_common         = { path = "../ruffle-fork/core/common" }
ruffle_core           = { path = "../ruffle-fork/core" }
ruffle_macros         = { path = "../ruffle-fork/core/macros" }
ruffle_render         = { path = "../ruffle-fork/render" }
ruffle_render_wgpu    = { path = "../ruffle-fork/render/wgpu" }
ruffle_video          = { path = "../ruffle-fork/video" }
ruffle_wstr           = { path = "../ruffle-fork/wstr" }
ruffle_frontend_utils = { path = "../ruffle-fork/frontend-utils" }
naga-agal             = { path = "../ruffle-fork/render/naga-agal" }
naga-pixelbender      = { path = "../ruffle-fork/render/naga-pixelbender" }
pixel_bender          = { path = "../ruffle-fork/render/pixel_bender" }
flv-rs                = { path = "../ruffle-fork/flv" }
asc                   = { path = "../ruffle-fork/tools/asc" }
build_playerglobal    = { path = "../ruffle-fork/core/build_playerglobal" }
