[package]
name = "moleruffle-desktop"
description = "MoleRuffle 桌面端(Windows/macOS/Linux)— 摩尔庄园网页版原生客户端"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "moleruffle"
path = "src/main.rs"

[dependencies]
moleruffle-core = { path = "../crates/moleruffle-core" }

ruffle_core.workspace = true
ruffle_render.workspace = true
ruffle_render_wgpu.workspace = true
ruffle_frontend_utils.workspace = true

url.workspace = true
wgpu.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
futures.workspace = true
async-task.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# iOS:纯触摸复制粘贴工具条(原生 UIView 叠层)。版本对齐 winit 已用的 objc2 0.5.2 套。
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["NSString", "NSGeometry", "NSArray", "NSItemProvider"] }
objc2-ui-kit = { version = "0.2.2", features = [
    "UIView", "UILabel", "UIColor", "UIFont", "NSText",
    "UIControl", "UIResponder", "UIPasteboard",
    "UIPasteControl", "UIPasteConfiguration", "UIPasteConfigurationSupporting",
    # Debug HUD:UIEdgeInsets/safeAreaInsets 需 UIGeometry;monospaced 字体/字重需 UIFontDescriptor。
    "UIGeometry", "UIFontDescriptor",
] }
