[package]
name = "moleruffle-core"
description = "MoleRuffle 跨平台共享核心:摩尔庄园专属配置、Player 装配、域名守卫 spoof、socket 放行、中文字体回退"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ruffle_core.workspace = true
ruffle_frontend_utils.workspace = true
url.workspace = true
tracing.workspace = true
# 设备字体:用系统字体库(mac=PingFang / win=YaHei / iOS=PingFang / Android=Noto CJK)
fontdb = "0.23"
unic-langid = "0.9"

# 系统剪贴板(复制粘贴)。iOS/Android 不支持 arboard,移动端用内置字符串兜底。
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
arboard = "3"
